y.output
Gramática

    0 $accept: program $end

    1 program: PROGRAM NAME BEGIN opt_decls END

    2 opt_decls: %empty
    3          | decl decl_tail

    4 decl_tail: %empty
    5          | ';' decl decl_tail

    6 decl: var_decl
    7     | proc_decl
    8     | rec_decl

    9 var_decl: VAR NAME ':' type var_init_opt
   10         | VAR NAME ASSIGN expression

   11 var_init_opt: %empty
   12             | ASSIGN expression

   13 proc_decl: PROCEDURE NAME '(' opt_param_list ')' opt_type block

   14 opt_param_list: %empty
   15               | paramfield_decl paramfield_tail

   16 paramfield_tail: %empty
   17                | ',' paramfield_decl paramfield_tail

   18 opt_type: %empty
   19         | ':' type

   20 block: BEGIN proc_body_opt stmt_list END

   21 proc_body_opt: %empty
   22              | decl decl_tail IN

   23 rec_decl: STRUCT NAME '{' opt_paramfield_decls '}'

   24 opt_paramfield_decls: %empty
   25                     | paramfield_decl paramfield_decl_tail

   26 paramfield_decl_tail: %empty
   27                     | ';' paramfield_decl paramfield_decl_tail

   28 paramfield_decl: NAME ':' type

   29 stmt_list: %empty
   30          | stmt stmt_tail

   31 stmt_tail: %empty
   32          | ';' stmt stmt_tail

   33 stmt: assign_stmt
   34     | if_stmt
   35     | while_stmt
   36     | return_stmt
   37     | call_stmt

   38 assign_stmt: var ASSIGN expression
   39            | deref_var ASSIGN expression

   40 if_stmt: IF expression THEN stmt_list else_opt FI

   41 else_opt: %empty
   42         | ELSE stmt_list

   43 while_stmt: WHILE expression DO stmt_list OD

   44 return_stmt: RETURN return_exp_opt

   45 return_exp_opt: %empty
   46               | expression

   47 call_stmt: NAME '(' call_args_opt ')'

   48 call_args_opt: %empty
   49              | expression call_args_tail

   50 call_args_tail: %empty
   51               | ',' expression call_args_tail

   52 expression: or_exp

   53 or_exp: or_exp OR and_exp
   54       | and_exp

   55 and_exp: and_exp AND not_exp
   56        | not_exp

   57 not_exp: NOT not_exp
   58        | rel_exp

   59 rel_exp: rel_exp LT add_exp
   60        | rel_exp LE add_exp
   61        | rel_exp GT add_exp
   62        | rel_exp GE add_exp
   63        | rel_exp EQ add_exp
   64        | rel_exp NE add_exp
   65        | add_exp

   66 add_exp: add_exp PLUS mult_exp
   67        | add_exp MINUS mult_exp
   68        | mult_exp

   69 mult_exp: mult_exp MULT exp_exp
   70         | mult_exp DIV exp_exp
   71         | exp_exp

   72 exp_exp: unary_exp EXP_OP exp_exp
   73        | unary_exp

   74 unary_exp: MINUS unary_exp
   75          | primary_exp

   76 primary_exp: literal
   77            | call_stmt
   78            | NEW NAME
   79            | var
   80            | ref_var
   81            | deref_var
   82            | '(' expression ')'

   83 var: NAME var_suffix

   84 var_suffix: %empty
   85           | '.' NAME var_suffix

   86 ref_var: REF '(' var ')'

   87 deref_var: DEREF '(' var ')'
   88          | DEREF '(' deref_var ')'

   89 literal: FLOAT_LITERAL
   90        | INT_LITERAL
   91        | STRING_LITERAL
   92        | bool_literal
   93        | NULL_LIT

   94 bool_literal: TRUE
   95             | FALSE

   96 type: FLOAT_T
   97     | INT_T
   98     | STRING_T
   99     | BOOL_T
  100     | NAME
  101     | REF '(' type ')'


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 13 47 82 86 87 88 101
    ')' (41) 13 47 82 86 87 88 101
    ',' (44) 17 51
    '.' (46) 85
    ':' (58) 9 19 28
    ';' (59) 5 27 32
    '{' (123) 23
    '}' (125) 23
    error (256)
    NAME <str> (258) 1 9 10 13 23 28 47 78 83 85 100
    FLOAT_LITERAL <str> (259) 89
    INT_LITERAL <str> (260) 90
    STRING_LITERAL <str> (261) 91
    TRUE (262) 94
    FALSE (263) 95
    NULL_LIT (264) 93
    PROGRAM (265) 1
    BEGIN (266) 1 20
    END (267) 1 20
    VAR (268) 9 10
    PROCEDURE (269) 13
    STRUCT (270) 23
    IN (271) 22
    IF (272) 40
    THEN (273) 40
    ELSE (274) 42
    FI (275) 40
    WHILE (276) 43
    DO (277) 43
    OD (278) 43
    RETURN (279) 44
    NEW (280) 78
    DEREF (281) 87 88
    REF (282) 86 101
    NOT (283) 57
    ASSIGN (284) 10 12 38 39
    AND (285) 55
    OR (286) 53
    LT (287) 59
    LE (288) 60
    GT (289) 61
    GE (290) 62
    EQ (291) 63
    NE (292) 64
    PLUS (293) 66
    MINUS (294) 67 74
    MULT (295) 69
    DIV (296) 70
    EXP_OP (297) 72
    FLOAT_T (298) 96
    INT_T (299) 97
    STRING_T (300) 98
    BOOL_T (301) 99


Não terminais com as regras onde eles aparecem

    $accept (55)
        à esquerda: 0
    program (56)
        à esquerda: 1
        à direita: 0
    opt_decls (57)
        à esquerda: 2 3
        à direita: 1
    decl_tail (58)
        à esquerda: 4 5
        à direita: 3 5 22
    decl (59)
        à esquerda: 6 7 8
        à direita: 3 5 22
    var_decl (60)
        à esquerda: 9 10
        à direita: 6
    var_init_opt (61)
        à esquerda: 11 12
        à direita: 9
    proc_decl (62)
        à esquerda: 13
        à direita: 7
    opt_param_list (63)
        à esquerda: 14 15
        à direita: 13
    paramfield_tail (64)
        à esquerda: 16 17
        à direita: 15 17
    opt_type (65)
        à esquerda: 18 19
        à direita: 13
    block (66)
        à esquerda: 20
        à direita: 13
    proc_body_opt (67)
        à esquerda: 21 22
        à direita: 20
    rec_decl (68)
        à esquerda: 23
        à direita: 8
    opt_paramfield_decls (69)
        à esquerda: 24 25
        à direita: 23
    paramfield_decl_tail (70)
        à esquerda: 26 27
        à direita: 25 27
    paramfield_decl (71)
        à esquerda: 28
        à direita: 15 17 25 27
    stmt_list (72)
        à esquerda: 29 30
        à direita: 20 40 42 43
    stmt_tail (73)
        à esquerda: 31 32
        à direita: 30 32
    stmt (74)
        à esquerda: 33 34 35 36 37
        à direita: 30 32
    assign_stmt (75)
        à esquerda: 38 39
        à direita: 33
    if_stmt (76)
        à esquerda: 40
        à direita: 34
    else_opt (77)
        à esquerda: 41 42
        à direita: 40
    while_stmt (78)
        à esquerda: 43
        à direita: 35
    return_stmt (79)
        à esquerda: 44
        à direita: 36
    return_exp_opt (80)
        à esquerda: 45 46
        à direita: 44
    call_stmt (81)
        à esquerda: 47
        à direita: 37 77
    call_args_opt (82)
        à esquerda: 48 49
        à direita: 47
    call_args_tail (83)
        à esquerda: 50 51
        à direita: 49 51
    expression (84)
        à esquerda: 52
        à direita: 10 12 38 39 40 43 46 49 51 82
    or_exp (85)
        à esquerda: 53 54
        à direita: 52 53
    and_exp (86)
        à esquerda: 55 56
        à direita: 53 54 55
    not_exp (87)
        à esquerda: 57 58
        à direita: 55 56 57
    rel_exp (88)
        à esquerda: 59 60 61 62 63 64 65
        à direita: 58 59 60 61 62 63 64
    add_exp (89)
        à esquerda: 66 67 68
        à direita: 59 60 61 62 63 64 65 66 67
    mult_exp (90)
        à esquerda: 69 70 71
        à direita: 66 67 68 69 70
    exp_exp (91)
        à esquerda: 72 73
        à direita: 69 70 71 72
    unary_exp (92)
        à esquerda: 74 75
        à direita: 72 73 74
    primary_exp (93)
        à esquerda: 76 77 78 79 80 81 82
        à direita: 75
    var (94)
        à esquerda: 83
        à direita: 38 79 86 87
    var_suffix (95)
        à esquerda: 84 85
        à direita: 83 85
    ref_var (96)
        à esquerda: 86
        à direita: 80
    deref_var (97)
        à esquerda: 87 88
        à direita: 39 81 88
    literal (98)
        à esquerda: 89 90 91 92 93
        à direita: 76
    bool_literal (99)
        à esquerda: 94 95
        à direita: 92
    type (100)
        à esquerda: 96 97 98 99 100 101
        à direita: 9 19 28 101


Estado 0

    0 $accept: . program $end

    PROGRAM  deslocar, e ir ao estado 1

    program  ir ao estado 2


Estado 1

    1 program: PROGRAM . NAME BEGIN opt_decls END

    NAME  deslocar, e ir ao estado 3


Estado 2

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 4


Estado 3

    1 program: PROGRAM NAME . BEGIN opt_decls END

    BEGIN  deslocar, e ir ao estado 5


Estado 4

    0 $accept: program $end .

    $padrão  aceitar


Estado 5

    1 program: PROGRAM NAME BEGIN . opt_decls END

    VAR        deslocar, e ir ao estado 6
    PROCEDURE  deslocar, e ir ao estado 7
    STRUCT     deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 2 (opt_decls)

    opt_decls  ir ao estado 9
    decl       ir ao estado 10
    var_decl   ir ao estado 11
    proc_decl  ir ao estado 12
    rec_decl   ir ao estado 13


Estado 6

    9 var_decl: VAR . NAME ':' type var_init_opt
   10         | VAR . NAME ASSIGN expression

    NAME  deslocar, e ir ao estado 14


Estado 7

   13 proc_decl: PROCEDURE . NAME '(' opt_param_list ')' opt_type block

    NAME  deslocar, e ir ao estado 15


Estado 8

   23 rec_decl: STRUCT . NAME '{' opt_paramfield_decls '}'

    NAME  deslocar, e ir ao estado 16


Estado 9

    1 program: PROGRAM NAME BEGIN opt_decls . END

    END  deslocar, e ir ao estado 17


Estado 10

    3 opt_decls: decl . decl_tail

    ';'  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 4 (decl_tail)

    decl_tail  ir ao estado 19


Estado 11

    6 decl: var_decl .

    $padrão  reduzir usando a regra 6 (decl)


Estado 12

    7 decl: proc_decl .

    $padrão  reduzir usando a regra 7 (decl)


Estado 13

    8 decl: rec_decl .

    $padrão  reduzir usando a regra 8 (decl)


Estado 14

    9 var_decl: VAR NAME . ':' type var_init_opt
   10         | VAR NAME . ASSIGN expression

    ASSIGN  deslocar, e ir ao estado 20
    ':'     deslocar, e ir ao estado 21


Estado 15

   13 proc_decl: PROCEDURE NAME . '(' opt_param_list ')' opt_type block

    '('  deslocar, e ir ao estado 22


Estado 16

   23 rec_decl: STRUCT NAME . '{' opt_paramfield_decls '}'

    '{'  deslocar, e ir ao estado 23


Estado 17

    1 program: PROGRAM NAME BEGIN opt_decls END .

    $padrão  reduzir usando a regra 1 (program)


Estado 18

    5 decl_tail: ';' . decl decl_tail

    VAR        deslocar, e ir ao estado 6
    PROCEDURE  deslocar, e ir ao estado 7
    STRUCT     deslocar, e ir ao estado 8

    decl       ir ao estado 24
    var_decl   ir ao estado 11
    proc_decl  ir ao estado 12
    rec_decl   ir ao estado 13


Estado 19

    3 opt_decls: decl decl_tail .

    $padrão  reduzir usando a regra 3 (opt_decls)


Estado 20

   10 var_decl: VAR NAME ASSIGN . expression

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    NOT             deslocar, e ir ao estado 35
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    expression    ir ao estado 39
    or_exp        ir ao estado 40
    and_exp       ir ao estado 41
    not_exp       ir ao estado 42
    rel_exp       ir ao estado 43
    add_exp       ir ao estado 44
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 21

    9 var_decl: VAR NAME ':' . type var_init_opt

    NAME      deslocar, e ir ao estado 54
    REF       deslocar, e ir ao estado 55
    FLOAT_T   deslocar, e ir ao estado 56
    INT_T     deslocar, e ir ao estado 57
    STRING_T  deslocar, e ir ao estado 58
    BOOL_T    deslocar, e ir ao estado 59

    type  ir ao estado 60


Estado 22

   13 proc_decl: PROCEDURE NAME '(' . opt_param_list ')' opt_type block

    NAME  deslocar, e ir ao estado 61

    $padrão  reduzir usando a regra 14 (opt_param_list)

    opt_param_list   ir ao estado 62
    paramfield_decl  ir ao estado 63


Estado 23

   23 rec_decl: STRUCT NAME '{' . opt_paramfield_decls '}'

    NAME  deslocar, e ir ao estado 61

    $padrão  reduzir usando a regra 24 (opt_paramfield_decls)

    opt_paramfield_decls  ir ao estado 64
    paramfield_decl       ir ao estado 65


Estado 24

    5 decl_tail: ';' decl . decl_tail

    ';'  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 4 (decl_tail)

    decl_tail  ir ao estado 66


Estado 25

   47 call_stmt: NAME . '(' call_args_opt ')'
   83 var: NAME . var_suffix

    '('  deslocar, e ir ao estado 67
    '.'  deslocar, e ir ao estado 68

    $padrão  reduzir usando a regra 84 (var_suffix)

    var_suffix  ir ao estado 69


Estado 26

   89 literal: FLOAT_LITERAL .

    $padrão  reduzir usando a regra 89 (literal)


Estado 27

   90 literal: INT_LITERAL .

    $padrão  reduzir usando a regra 90 (literal)


Estado 28

   91 literal: STRING_LITERAL .

    $padrão  reduzir usando a regra 91 (literal)


Estado 29

   94 bool_literal: TRUE .

    $padrão  reduzir usando a regra 94 (bool_literal)


Estado 30

   95 bool_literal: FALSE .

    $padrão  reduzir usando a regra 95 (bool_literal)


Estado 31

   93 literal: NULL_LIT .

    $padrão  reduzir usando a regra 93 (literal)


Estado 32

   78 primary_exp: NEW . NAME

    NAME  deslocar, e ir ao estado 70


Estado 33

   87 deref_var: DEREF . '(' var ')'
   88          | DEREF . '(' deref_var ')'

    '('  deslocar, e ir ao estado 71


Estado 34

   86 ref_var: REF . '(' var ')'

    '('  deslocar, e ir ao estado 72


Estado 35

   57 not_exp: NOT . not_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    NOT             deslocar, e ir ao estado 35
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    not_exp       ir ao estado 73
    rel_exp       ir ao estado 43
    add_exp       ir ao estado 44
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 36

   74 unary_exp: MINUS . unary_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    unary_exp     ir ao estado 74
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 37

   82 primary_exp: '(' . expression ')'

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    NOT             deslocar, e ir ao estado 35
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    expression    ir ao estado 75
    or_exp        ir ao estado 40
    and_exp       ir ao estado 41
    not_exp       ir ao estado 42
    rel_exp       ir ao estado 43
    add_exp       ir ao estado 44
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 38

   77 primary_exp: call_stmt .

    $padrão  reduzir usando a regra 77 (primary_exp)


Estado 39

   10 var_decl: VAR NAME ASSIGN expression .

    $padrão  reduzir usando a regra 10 (var_decl)


Estado 40

   52 expression: or_exp .
   53 or_exp: or_exp . OR and_exp

    OR  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 52 (expression)


Estado 41

   54 or_exp: and_exp .
   55 and_exp: and_exp . AND not_exp

    AND  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 54 (or_exp)


Estado 42

   56 and_exp: not_exp .

    $padrão  reduzir usando a regra 56 (and_exp)


Estado 43

   58 not_exp: rel_exp .
   59 rel_exp: rel_exp . LT add_exp
   60        | rel_exp . LE add_exp
   61        | rel_exp . GT add_exp
   62        | rel_exp . GE add_exp
   63        | rel_exp . EQ add_exp
   64        | rel_exp . NE add_exp

    LT  deslocar, e ir ao estado 78
    LE  deslocar, e ir ao estado 79
    GT  deslocar, e ir ao estado 80
    GE  deslocar, e ir ao estado 81
    EQ  deslocar, e ir ao estado 82
    NE  deslocar, e ir ao estado 83

    $padrão  reduzir usando a regra 58 (not_exp)


Estado 44

   65 rel_exp: add_exp .
   66 add_exp: add_exp . PLUS mult_exp
   67        | add_exp . MINUS mult_exp

    PLUS   deslocar, e ir ao estado 84
    MINUS  deslocar, e ir ao estado 85

    $padrão  reduzir usando a regra 65 (rel_exp)


Estado 45

   68 add_exp: mult_exp .
   69 mult_exp: mult_exp . MULT exp_exp
   70         | mult_exp . DIV exp_exp

    MULT  deslocar, e ir ao estado 86
    DIV   deslocar, e ir ao estado 87

    $padrão  reduzir usando a regra 68 (add_exp)


Estado 46

   71 mult_exp: exp_exp .

    $padrão  reduzir usando a regra 71 (mult_exp)


Estado 47

   72 exp_exp: unary_exp . EXP_OP exp_exp
   73        | unary_exp .

    EXP_OP  deslocar, e ir ao estado 88

    $padrão  reduzir usando a regra 73 (exp_exp)


Estado 48

   75 unary_exp: primary_exp .

    $padrão  reduzir usando a regra 75 (unary_exp)


Estado 49

   79 primary_exp: var .

    $padrão  reduzir usando a regra 79 (primary_exp)


Estado 50

   80 primary_exp: ref_var .

    $padrão  reduzir usando a regra 80 (primary_exp)


Estado 51

   81 primary_exp: deref_var .

    $padrão  reduzir usando a regra 81 (primary_exp)


Estado 52

   76 primary_exp: literal .

    $padrão  reduzir usando a regra 76 (primary_exp)


Estado 53

   92 literal: bool_literal .

    $padrão  reduzir usando a regra 92 (literal)


Estado 54

  100 type: NAME .

    $padrão  reduzir usando a regra 100 (type)


Estado 55

  101 type: REF . '(' type ')'

    '('  deslocar, e ir ao estado 89


Estado 56

   96 type: FLOAT_T .

    $padrão  reduzir usando a regra 96 (type)


Estado 57

   97 type: INT_T .

    $padrão  reduzir usando a regra 97 (type)


Estado 58

   98 type: STRING_T .

    $padrão  reduzir usando a regra 98 (type)


Estado 59

   99 type: BOOL_T .

    $padrão  reduzir usando a regra 99 (type)


Estado 60

    9 var_decl: VAR NAME ':' type . var_init_opt

    ASSIGN  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 11 (var_init_opt)

    var_init_opt  ir ao estado 91


Estado 61

   28 paramfield_decl: NAME . ':' type

    ':'  deslocar, e ir ao estado 92


Estado 62

   13 proc_decl: PROCEDURE NAME '(' opt_param_list . ')' opt_type block

    ')'  deslocar, e ir ao estado 93


Estado 63

   15 opt_param_list: paramfield_decl . paramfield_tail

    ','  deslocar, e ir ao estado 94

    $padrão  reduzir usando a regra 16 (paramfield_tail)

    paramfield_tail  ir ao estado 95


Estado 64

   23 rec_decl: STRUCT NAME '{' opt_paramfield_decls . '}'

    '}'  deslocar, e ir ao estado 96


Estado 65

   25 opt_paramfield_decls: paramfield_decl . paramfield_decl_tail

    ';'  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 26 (paramfield_decl_tail)

    paramfield_decl_tail  ir ao estado 98


Estado 66

    5 decl_tail: ';' decl decl_tail .

    $padrão  reduzir usando a regra 5 (decl_tail)


Estado 67

   47 call_stmt: NAME '(' . call_args_opt ')'

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    NOT             deslocar, e ir ao estado 35
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 48 (call_args_opt)

    call_stmt      ir ao estado 38
    call_args_opt  ir ao estado 99
    expression     ir ao estado 100
    or_exp         ir ao estado 40
    and_exp        ir ao estado 41
    not_exp        ir ao estado 42
    rel_exp        ir ao estado 43
    add_exp        ir ao estado 44
    mult_exp       ir ao estado 45
    exp_exp        ir ao estado 46
    unary_exp      ir ao estado 47
    primary_exp    ir ao estado 48
    var            ir ao estado 49
    ref_var        ir ao estado 50
    deref_var      ir ao estado 51
    literal        ir ao estado 52
    bool_literal   ir ao estado 53


Estado 68

   85 var_suffix: '.' . NAME var_suffix

    NAME  deslocar, e ir ao estado 101


Estado 69

   83 var: NAME var_suffix .

    $padrão  reduzir usando a regra 83 (var)


Estado 70

   78 primary_exp: NEW NAME .

    $padrão  reduzir usando a regra 78 (primary_exp)


Estado 71

   87 deref_var: DEREF '(' . var ')'
   88          | DEREF '(' . deref_var ')'

    NAME   deslocar, e ir ao estado 102
    DEREF  deslocar, e ir ao estado 33

    var        ir ao estado 103
    deref_var  ir ao estado 104


Estado 72

   86 ref_var: REF '(' . var ')'

    NAME  deslocar, e ir ao estado 102

    var  ir ao estado 105


Estado 73

   57 not_exp: NOT not_exp .

    $padrão  reduzir usando a regra 57 (not_exp)


Estado 74

   74 unary_exp: MINUS unary_exp .

    $padrão  reduzir usando a regra 74 (unary_exp)


Estado 75

   82 primary_exp: '(' expression . ')'

    ')'  deslocar, e ir ao estado 106


Estado 76

   53 or_exp: or_exp OR . and_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    NOT             deslocar, e ir ao estado 35
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    and_exp       ir ao estado 107
    not_exp       ir ao estado 42
    rel_exp       ir ao estado 43
    add_exp       ir ao estado 44
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 77

   55 and_exp: and_exp AND . not_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    NOT             deslocar, e ir ao estado 35
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    not_exp       ir ao estado 108
    rel_exp       ir ao estado 43
    add_exp       ir ao estado 44
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 78

   59 rel_exp: rel_exp LT . add_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    add_exp       ir ao estado 109
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 79

   60 rel_exp: rel_exp LE . add_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    add_exp       ir ao estado 110
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 80

   61 rel_exp: rel_exp GT . add_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    add_exp       ir ao estado 111
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 81

   62 rel_exp: rel_exp GE . add_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    add_exp       ir ao estado 112
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53


Estado 82

   63 rel_exp: rel_exp EQ . add_exp

    NAME            deslocar, e ir ao estado 25
    FLOAT_LITERAL   deslocar, e ir ao estado 26
    INT_LITERAL     deslocar, e ir ao estado 27
    STRING_LITERAL  deslocar, e ir ao estado 28
    TRUE            deslocar, e ir ao estado 29
    FALSE           deslocar, e ir ao estado 30
    NULL_LIT        deslocar, e ir ao estado 31
    NEW             deslocar, e ir ao estado 32
    DEREF           deslocar, e ir ao estado 33
    REF             deslocar, e ir ao estado 34
    MINUS           deslocar, e ir ao estado 36
    '('             deslocar, e ir ao estado 37

    call_stmt     ir ao estado 38
    add_exp       ir ao estado 113
    mult_exp      ir ao estado 45
    exp_exp       ir ao estado 46
    unary_exp     ir ao estado 47
    primary_exp   ir ao estado 48
    var           ir ao estado 49
    ref_var       ir ao estado 50
    deref_var     ir ao estado 51
    literal       ir ao estado 52
    bool_literal  ir ao estado 53

